--- a/benchmark/benchmark_report.Rmd
+++ b/benchmark/benchmark_report.Rmd
@@ -10,6 +10,10 @@ output:
     theme: cosmo
     code_folding: hide
     df_print: paged
+  md_document:
+    variant: gfm
+    preserve_yaml: true
+always_allow_html: true
 ---
 
 ```{r setup, include=FALSE}
